--- a/cars.html
+++ b/cars.html
@@ -7,13 +7,13 @@
 	<meta name="referrer" content="strict-origin-when-cross-origin">
 	
 		<link href="./_app/immutable/assets/0.WttUnVdN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CDzt2Dzg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/usjaCIqR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CKG0NDhn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bk0A_1z7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B0-8kWcJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-blix4w.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B60QwDAg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BfMFP0xS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dg-vhPb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/EVnuVSMK.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CmUFRIiz.js">
@@ -29,15 +29,15 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/projects.json">{"status":200,"statusText":"","headers":{},"body":"{\n  \"$schema\": \"../src/lib/json-schema.json\",\n  \"projects\": [\n    {\n      \"title\": \"KaikiBot\",\n      \"description\": \"Customizable Discord bot with lots of unique features\",\n      \"techStacks\": [\"Node.js\", \"Prisma\", \"MySQL2\", \"Discord.js\", \"Express.js\", \"Sapphire framework\", \"TypeScript\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/KaikiBot\"\n    },\n    {\n      \"title\": \"Kaikibot.xyz\",\n      \"description\": \"Website with tools, information and a fully fledged dashboard\",\n      \"techStacks\": [\"Bun.sh\", \"Svelte/Kit\", \"TypeScript\", \"Tailwindcss\", \"Flowbite\", \"Auth.js\", \"Vite\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/KaikiBot.xyz\"\n    },\n    {\n      \"title\": \"nekosapi\",\n      \"description\": \"Async JavaScript wrapper for \u003Ca href=https://nekosapi.com/>NekosAPI\u003C/a> API\",\n      \"techStacks\": [\"Node.js\", \"TypeScript\", \"NPM\", \"Axios\", \"Proxy\", \"TypeDoc\", \"API\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/nekosapi\"\n    },\n    {\n      \"title\": \"discord-js-button-pagination-ts\",\n      \"description\": \"Forked pagination modified to use button elements and improved functionality\",\n      \"techStacks\": [\"NPM\", \"TypeScript\", \"TypeDoc\", \"Discord.js\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/discord.js-pagination\"\n    },\n    {\n      \"title\": \"waifu-dot-pics\",\n      \"description\": \"Fast async API wrapper for \u003Ca href=https://waifu.pics/>Waifu.pics\u003C/a>\",\n      \"techStacks\": [\"NPM\", \"TypeScript\", \"0 Dependencies\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/waifu-dot-pics\"\n    },\n    {\n      \"title\": \"NorthShirahebi\",\n      \"description\": \"A Medusa module for \u003Ca href=https://nadeko.bot/>NadekoBot\u003C/a>!\",\n      \"techStacks\": [\"C#\", \"Module\", \"API\", \".NET\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/NorthShirahebi\"\n    },\n    {\n      \"title\": \"Asp.Net Map reporting system\",\n      \"description\": \"Reporting system to improve Kartverket's maps\",\n      \"techStacks\": [\"C#\", \"ASP.NET\", \"API\", \".NET\", \"JavaScript\", \"Bootstrap\"],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/IS202-AspNet2308\"\n    }\n  ],\n  \"systems\": [\n    {\n      \"title\": \"💻 openSUSE Tumbleweed\",\n      \"description\": \"Desktop computer with high-end computer hardware\",\n      \"techStacks\": [\"AMD 5800X\", \"RADEON RX 6700XT\", \"32GB Ram\", \"5.5TB total SSD Storage\"]\n    },\n    {\n      \"title\": \"🖥️ Debian 12\",\n      \"description\": \"Home server hosting multiple instances of personal cloud and media services. Raid 5 planned in the future.\",\n      \"techStacks\": [\"Nextcloud\", \"Jellyfin\", \"Cloudflare Tunnels\", \"LVM\", \"9.5TB HDD Storage\"]\n    },\n    {\n      \"title\": \"🖥️ Ubuntu VPS\",\n      \"description\": \"Virtual Private Server hosting my projects\",\n      \"techStacks\": [\"Cloudflare Tunnels\", \"Node.js\", \"Bun.sh\", \"MariaDB\"]\n    },\n    {\n      \"title\": \"💻 EndeavourOS\",\n      \"description\": \"Laptop for studying and work on the go\",\n      \"techStacks\": [\"KDE\", \"Arch\", \"Zsh\", \"Docker\"]\n    }\n  ],\n  \"cars\": [\n    {\n      \"title\": \"2008 Subaru Outback\",\n      \"description\": \"BP Legacy/Outbacks are the best looking wagons, and I love mine. I'd love to put it on coilovers and upgrade the anti-roll bars\",\n      \"specifications\": [\"H4 2.5L EJ253 NA\", \"173hp\", \"BP9\", \"AWD\"]\n    },\n    {\n      \"title\": \"1987 Mercedes 230E\",\n      \"description\": \"E-class W124 with the modest 2.3L engine. Gorgeous car and a superb driving experience. Needs some rust and paint work done, and some idling improvements.\",\n      \"specifications\": [\"I4 2.3L M102 NA\", \"130hp\"]\n    },\n    {\n      \"title\": \"✨ Wishes\",\n      \"description\": \"I want to own any of these in the near future\",\n      \"specifications\": [\"Subaru Impreza GC/GF Turbo\", \"Nissan Silvia S13\", \"Honda Civic EK9\", \"Lancia Delta Integrale\", \"Volvo 240 Wagon\", \"Mazda RX7 FC\"]\n    }\n  ]\n}\n\n"}</script>
 			<script>
 				{
-					__sveltekit_vpnn12 = {
+					__sveltekit_1bnm1rv = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CDzt2Dzg.js"),
-						import("./_app/immutable/entry/app.BfMFP0xS.js")
+						import("./_app/immutable/entry/start.CKG0NDhn.js"),
+						import("./_app/immutable/entry/app.Dg-vhPb9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
