--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,8 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="h-full bg-fixed bg-gradient-to-br from-sky-700 to-blue-800">
+<body data-sveltekit-preload-data="hover"
+	class="h-full bg-fixed bg-gradient-to-br  from-gray-900 via-slate-900 to-blue-950">
 	<div class="min-h-full" style="display: contents">%sveltekit.body%</div>
 </body>
 
