--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="referrer" content="strict-origin-when-cross-origin" />
+		%sveltekit.head%
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="referrer" content="strict-origin-when-cross-origin">
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover"
-	class="h-full bg-fixed bg-gradient-to-br  from-gray-900 via-slate-900 to-blue-950">
-	<div class="min-h-full" style="display: contents">%sveltekit.body%</div>
-</body>
-
+	<body
+		data-sveltekit-preload-data="hover"
+		class="h-full bg-gradient-to-br from-gray-900 via-slate-900 to-blue-950 bg-fixed"
+	>
+		<div class="min-h-full" style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
