--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<meta name="referrer" content="strict-origin-when-cross-origin" />
 		
 		<link href="./_app/immutable/assets/0.BHl1qEtC.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CSAG1P_Y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DL20-RpW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dat_d4W6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bqjgyg_v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bk2qvWU_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C3mdxji_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.hqntkOfv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CnL74Wnt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXJrtjpe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/qrff-kms.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CK4pidiG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DFKVKUj6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CsmVg1Xi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BwGxdNLD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B8zygRDi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BW4VRqQb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CGEWLLRG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_CTED4D9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/SFTpTnfO.js">
@@ -33,15 +33,15 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/projects.json">{"status":200,"statusText":"","headers":{},"body":"{\n  \"$schema\": \"../src/lib/json-schema.json\",\n  \"projects\": [\n    {\n      \"title\": \"KaikiBot\",\n      \"description\": \"Customizable Discord bot with lots of unique features\",\n      \"techStacks\": [\n        \"Node.js\",\n        \"Prisma\",\n        \"MySQL2\",\n        \"Discord.js\",\n        \"Express.js\",\n        \"Sapphire framework\",\n        \"TypeScript\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/KaikiBot\"\n    },\n    {\n      \"title\": \"Kaikibot.xyz\",\n      \"description\": \"Website with tools, information and a fully fledged dashboard\",\n      \"techStacks\": [\n        \"Bun.sh\",\n        \"Svelte/Kit\",\n        \"TypeScript\",\n        \"Tailwindcss\",\n        \"Flowbite\",\n        \"Auth.js\",\n        \"Vite\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/KaikiBot.xyz\"\n    },\n    {\n      \"title\": \"nekosapi\",\n      \"description\": \"Async JavaScript wrapper for \u003Ca href=https://nekosapi.com/>NekosAPI\u003C/a> API\",\n      \"techStacks\": [\n        \"Node.js\",\n        \"TypeScript\",\n        \"NPM\",\n        \"Axios\",\n        \"Proxy\",\n        \"TypeDoc\",\n        \"API\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/nekosapi\"\n    },\n    {\n      \"title\": \"discord-js-button-pagination-ts\",\n      \"description\": \"Forked pagination modified to use button elements and improved functionality\",\n      \"techStacks\": [\n        \"NPM\",\n        \"TypeScript\",\n        \"TypeDoc\",\n        \"Discord.js\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/discord.js-pagination\"\n    },\n    {\n      \"title\": \"waifu-dot-pics\",\n      \"description\": \"Fast async API wrapper for \u003Ca href=https://waifu.pics/>Waifu.pics\u003C/a>\",\n      \"techStacks\": [\n        \"NPM\",\n        \"TypeScript\",\n        \"0 Dependencies\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/waifu-dot-pics\"\n    },\n    {\n      \"title\": \"NorthShirahebi\",\n      \"description\": \"A Medusa module for \u003Ca href=https://nadeko.bot/>NadekoBot\u003C/a>!\",\n      \"techStacks\": [\n        \"C#\",\n        \"Module\",\n        \"API\",\n        \".NET\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/NorthShirahebi\"\n    },\n    {\n      \"title\": \"Asp.Net Map reporting system\",\n      \"description\": \"Reporting system to improve Kartverket's maps\",\n      \"techStacks\": [\n        \"C#\",\n        \"ASP.NET\",\n        \"API\",\n        \".NET\",\n        \"EFCore\",\n        \"Docker\",\n        \"Leaflet\",\n        \"TypeScript\",\n        \"Bootstrap\",\n        \"MariaDB\"\n      ],\n      \"screens\": [],\n      \"repoLink\": \"https://github.com/CataDev0/IS202-AspNet2308\"\n    }\n  ],\n  \"systems\": [\n    {\n      \"title\": \"💻 openSUSE Tumbleweed\",\n      \"description\": \"Desktop computer with high-end computer hardware\",\n      \"techStacks\": [\n        \"AMD 5800X\",\n        \"RADEON RX 6700XT\",\n        \"32GB Ram\",\n        \"5.5TB total SSD Storage\"\n      ],\n      \"reason\": \"Distro hopping led me here. Tumbleweed has worked great for me ever since I switched from Windows, and supports everything needed for software development, gaming and general usage.\"\n    },\n    {\n      \"title\": \"🖥️ Debian 12\",\n      \"description\": \"Home server hosting multiple instances of personal cloud and media services. Raid 5 planned in the future.\",\n      \"techStacks\": [\n        \"Nextcloud\",\n        \"Jellyfin\",\n        \"Cloudflare Tunnels\",\n        \"LVM\",\n        \"9.5TB HDD Storage\"\n      ],\n      \"reason\": \"Debian is perhaps not the most up to date distro, but it is stable. Inherently well tested software, solid reliability. Debian's wide software support can be matched with Ubuntu, despite not being a Cannonical product.\"\n    },\n    {\n      \"title\": \"🖥️ Ubuntu 22.04\",\n      \"description\": \"Virtual Private Server hosting my projects\",\n      \"techStacks\": [\n        \"Cloudflare Tunnels\",\n        \"Node.js\",\n        \"Bun.sh\",\n        \"MariaDB\",\n        \"Docker\"\n      ],\n      \"reason\": \"Ubuntu is the best supported and most used distribution in the cloud infrastructure world (citation needed). It's uncomplicated.\"\n    },\n    {\n      \"title\": \"💻 EndeavourOS\",\n      \"description\": \"Laptop for studying and work on the go\",\n      \"techStacks\": [\n        \"KDE\",\n        \"Arch\",\n        \"Zsh\",\n        \"Docker\"\n      ],\n      \"reason\": \"[Arch User Repository](https://aur.archlinux.org/). The all powerful source of all kinds of niche packages a software developer could ever need. Also having up to date packages is very beneficial in an environment with emerging technologies around every corner.\"\n    }\n  ],\n  \"cars\": [\n    {\n      \"title\": \"2008 Subaru Outback\",\n      \"description\": \"BP Legacy/Outbacks are the best looking wagons, and I love mine. I'd love to put it on coilovers and upgrade the anti-roll bars\",\n      \"specifications\": [\n        \"H4 2.5L EJ253 NA\",\n        \"173hp\",\n        \"BP9\",\n        \"AWD\"\n      ]\n    },\n    {\n      \"title\": \"1987 Mercedes 230E\",\n      \"description\": \"E-class W124 with the modest 2.3L engine. Gorgeous car and a superb driving experience. Needs some rust and paint work done, and some idling improvements.\",\n      \"specifications\": [\n        \"I4 2.3L M102 NA\",\n        \"130hp\"\n      ]\n    },\n    {\n      \"title\": \"✨ Wishes\",\n      \"description\": \"I want to own any of these in the near future\",\n      \"specifications\": [\n        \"Subaru Impreza GC/GF Turbo\",\n        \"Nissan Silvia S13\",\n        \"Honda Civic EK9\",\n        \"Lancia Delta Integrale\",\n        \"Volvo 240 Wagon\",\n        \"Mazda RX7 FC\",\n        \"Datsun 280Z\"\n      ]\n    }\n  ]\n}"}</script>
 			<script>
 				{
-					__sveltekit_1qnry8l = {
+					__sveltekit_1spylau = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CSAG1P_Y.js"),
-						import("./_app/immutable/entry/app.hqntkOfv.js")
+						import("./_app/immutable/entry/start.Dat_d4W6.js"),
+						import("./_app/immutable/entry/app.CnL74Wnt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
